--- a/cart.html
+++ b/cart.html
@@ -145,7 +145,7 @@
                                 <span class="total-price">{{totalMoney | Money('元')}}</span>
                             </div>
                             <div class="next-btn-wrap">
-                                <a href="#" class="btn btn-red" style="width: 200px">结账</a>
+                                <a href="address.html" class="btn btn-red" style="width: 200px">结账</a>
                             </div>
                         </div>
                         <div class="md-modal modal-msg md-modal-transition" id="showModal" v-bind:class="{'md-show': delFlag}">
